--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -36,12 +36,13 @@
                 <tr>
                         <td><span style="padding: 5px;">{{ activite.getLibelle() }}</span></td>
                     {% for competence in competences %}
-                        <td></td>
+                        <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
                                     X
                                 {% endif %}
                             {% endfor %}
+                        </td>
                     {% endfor %}
                 </tr>
             {% endfor %}
@@ -71,7 +72,7 @@
                         {% for competence in competences %}
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                    <a style="background-color: darkred;"></a>
+                                   <h1 style="margin-left:23px;">X</h1>
                                 {% else %}
                                 {% endif %}
                             {% endfor %}
