--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -34,12 +34,13 @@
             </tr>
             {% for activite in activites %}
                 <tr>
-                        <td><span style="padding: 5px;">{{ activite.getLibelle() }}</span></td>
+                    <td> {{ activite.getLibelle() }} </td>
                     {% for competence in competences %}
                         <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                    X
+                                    <h1 style="margin-left:23px;">X</h1>
+                                {% else %}
                                 {% endif %}
                             {% endfor %}
                         </td>
@@ -51,14 +52,16 @@
             </tr>
             {% for activite in activites %}
                 <tr>
-                    <td>{{ activite.getLibelle() }}</td>
+                    <td> {{ activite.getLibelle() }} </td>
                     {% for competence in competences %}
-                        {% for compAct in activite.getCompetences() %}
-                            <td></td>
-                            {% if compAct.getId() == competence.getId() %}
-                                <td style="background-color: darkred;"></td>
-                            {% endif %}
-                        {% endfor %}
+                        <td>
+                            {% for compAct in activite.getCompetences() %}
+                                {% if compAct.getId() == competence.getId() %}
+                                    <h1 style="margin-left:23px;">X</h1>
+                                {% else %}
+                                {% endif %}
+                            {% endfor %}
+                        </td>
                     {% endfor %}
                 </tr>
             {% endfor %}
@@ -68,15 +71,15 @@
             {% for activite in activites %}
                 <tr>
                     <td> {{ activite.getLibelle() }} </td>
-                    <td>
                         {% for competence in competences %}
+                        <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
                                    <h1 style="margin-left:23px;">X</h1>
                                 {% else %}
                                 {% endif %}
                             {% endfor %}
-                    </td>
+                        </td>
                     {% endfor %}
                 </tr>
             {% endfor %}
