--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -39,7 +39,7 @@
                         <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                    <h1 style="margin-left:23px;">X</h1>
+                                    <h1 style="margin-left:23px;"><strong>X</strong></h1>
                                 {% else %}
                                 {% endif %}
                             {% endfor %}
@@ -57,7 +57,7 @@
                         <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                    <h1 style="margin-left:23px;">X</h1>
+                                    <h1 style="margin-left:23px;"><strong>X</strong></h1>
                                 {% else %}
                                 {% endif %}
                             {% endfor %}
@@ -75,7 +75,7 @@
                         <td>
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                   <h1 style="margin-left:23px;">X</h1>
+                                   <h1 style="margin-left:23px;"><strong>X</strong></h1>
                                 {% else %}
                                 {% endif %}
                             {% endfor %}
