--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6789,7 +6789,8 @@ button.close {
 }
 /* JDL */
 .tableau-vertical-div{
-  overflow: hidden;
+  width:70px;
+  margin-bottom: 50px !important;
   transform: rotate(-90deg);
   -webkit-transform: rotate(-90deg); /* Safari/Chrome */
   -moz-transform: rotate(-90deg); /* Firefox */
