--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6798,6 +6798,7 @@ button.close {
   -ms-transform: rotate(-90deg); /* IE 9 */
 }
 .tableau-vertical-th{
+  white-space: nowrap;
   height: 900px;
   width: 70px;
   vertical-align: bottom;
