--- a/web/bootstrap/css/bootstrap.css
+++ b/web/bootstrap/css/bootstrap.css
@@ -6803,6 +6803,7 @@ button.close {
   vertical-align: bottom;
   white-space: nowrap;
   display: table-cell;
+  overflow: hidden;
 }
 /* EndJDL */
 @media print {
