--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -54,10 +54,10 @@
                 <tr>
                     <td> {{ activite.getLibelle() }} </td>
                     {% for competence in competences %}
-                        <td>
+                        <td style="text-align: center;">
                             {% for compAct in activite.getCompetences() %}
                                 {% if compAct.getId() == competence.getId() %}
-                                    <h1 style="margin-left:23px;"><strong>X</strong></h1>
+                                    <h1><strong>X</strong></h1>
                                 {% else %}
                                 {% endif %}
                             {% endfor %}
