--- a/vues/layout.html.twig
+++ b/vues/layout.html.twig
@@ -52,7 +52,7 @@
             <ul class="nav navbar-nav">
               <li class="dropdown">
                 <a class="dropdown-toggle">
-                  <!--<span class="hidden-xs"><b>{{ app.user.username }}</b></span>-->
+                  <span class="hidden-xs"><b>{# app.user.username #}</b></span>
                 </a>
               </li>
               <li>
