--- a/vues/acceuil.html.twig
+++ b/vues/acceuil.html.twig
@@ -19,7 +19,7 @@
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="/activite" class="small-box-footer">
+                    <a href="{{ path('activite') }}" class="small-box-footer">
                         Pour en savoir plus <i class="fa fa-arrow-circle-right"></i>
                     </a>
                 </div>
@@ -34,7 +34,7 @@
                      <div class="icon">
                          <i class="ion ion-pie-graph"></i>
                      </div>
-                        <a href="/competence" class="small-box-footer">
+                        <a href="{{ path('competence') }}" class="small-box-footer">
                               Pour en savoir plus <i class="fa fa-arrow-circle-right"></i>
                         </a>
                  </div>
