--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -23,7 +23,7 @@
                     <thead>
                       <tr>
                         <th>Nom</th>
-                        <th>Prenom</th>
+                        <th>Prénom</th>
                         <th>Email</th>
                         <th style="width:60px;">Action</th>
                       </tr>
