--- a/vues/activite.html.twig
+++ b/vues/activite.html.twig
@@ -5,8 +5,8 @@
     <h1>
         Activites
         <small>liste</small>
-        <a href="{{ path('ajout_activite') }}" type="button" style="float:right;margin:-2px" class="btn bg-orange btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
-        <a href="{{ path('tableau') }}" type="button" style="float:right;margin:-2px" class="btn bg-green btn-flat margin"><i class="fa fa-plus"></i><span style="margin:3px;">Exporter</span></a>
+        <a href="{{ path('ajout_activite') }}" type="button" style="float:right;margin-left:10px" class="btn bg-orange btn-flat"><i class="fa fa-plus"></i><span style="margin:3px;">Ajouter</span></a>
+        <a href="{{ path('tableau') }}" type="button" style="float:right;" class="btn bg-green btn-flat"><i class="fa fa-plus"></i><span style="margin:3px;">Exporter</span></a>
     </h1>
         </section>
 
