--- a/vues/error.html.twig
+++ b/vues/error.html.twig
@@ -14,7 +14,7 @@
             <div class="error-content">
               <h3><i class="fa fa-warning text-yellow"></i>{{ MessageErreur }}</h3>
               <p>
-               <a href="{{ path('/') }}">Retour a l'acceuil</a>
+               <a href="{{ path('acceuil') }}">Retour a l'acceuil</a>
               </p>
             </div><!-- /.error-content -->
           </div><!-- /.error-page -->
