--- a/vues/error.html.twig
+++ b/vues/error.html.twig
@@ -1,7 +1,33 @@
-{% extends "layout.html.twig" %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>SIOC | Connexion</title>
+    <!-- Tell the browser to be responsive to screen width -->
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <!-- Bootstrap 3.3.5 -->
+    <link rel="stylesheet" href="{{ app.request.basepath }}/bootstrap/css/bootstrap.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="{{ app.request.basepath }}/dist/css/AdminLTE.min.css">
+    <!-- iCheck -->
+    <link rel="stylesheet" href="{{ app.request.basepath }}/plugins/iCheck/square/blue.css">
+    <!-- YELLOW SKIN :) -->
+    <link rel="stylesheet" href="{{ app.request.basepath }}/dist/css/skins/skin-yellow.css">
 
-{% block content %}
-    <section class="content-header">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body class="hold-transition login-page">
+     <section class="content-header">
         <h1>
             Erreur {{ codeErreur }}
         </h1>
@@ -19,4 +45,21 @@
             </div><!-- /.error-content -->
           </div><!-- /.error-page -->
         </section><!-- /.content -->
-{% endblock %}
+
+    <!-- jQuery 2.1.4 -->
+    <script src="{{ app.request.basepath }}/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+    <!-- Bootstrap 3.3.5 -->
+    <script src="{{ app.request.basepath }}/bootstrap/js/bootstrap.min.js"></script>
+    <!-- iCheck -->
+    <script src="{{ app.request.basepath }}/plugins/iCheck/icheck.min.js"></script>
+    <script>
+      $(function () {
+        $('input').iCheck({
+          checkboxClass: 'icheckbox_square-blue',
+          radioClass: 'iradio_square-blue',
+          increaseArea: '20%' // optional
+        });
+      });
+    </script>
+  </body>
+</html>
