--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -11,7 +11,7 @@
   <div style="margin-left:15px; width:4800px; font-size: 15px;">
     <div style="align-content: center;">
 
-        <strong><h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION {{ promotion.annee }} - TABLEAU DE COMPETENCES</h1></strong>
+        <strong><h1 style="text-align: center;">BTS SERVICES INFORMATIQUES AUX ORGANISATIONS - SESSION {{ promotion.getAnnee }} - TABLEAU DE COMPETENCES</h1></strong>
          <div>
            <h1><span style="margin-right:15px;"> <strong>NOM et Prénom du candidat :</strong></span><i style="margin-right:1500px;">{{ app.user.nom }} {{ app.user.prenom }}</i><Strong><span>Parcours SLAM</span></Strong> <span style="margin-left: 1500px;">N° du candidat :</span></h1>
          </div>
