--- a/vues/error.html.twig
+++ b/vues/error.html.twig
@@ -28,6 +28,7 @@
   </head>
   <body class="hold-transition login-page">
         <!-- Main content -->
+    <div class="content-wrapper" style="min-height: 1126px;">
     <section class="content">
         <div class="error-page">
             <h2 class="headline text-yellow">Erreur {{ codeErreur }}</h2>
@@ -41,6 +42,7 @@
             </div><!-- /.error-content -->
           </div><!-- /.error-page -->
         </section><!-- /.content -->
+    </div>
 
     <!-- jQuery 2.1.4 -->
     <script src="{{ app.request.basepath }}/plugins/jQuery/jQuery-2.1.4.min.js"></script>
