--- a/vues/error.html.twig
+++ b/vues/error.html.twig
@@ -33,7 +33,7 @@
 
         <!-- Main content -->
         <section class="content">
-          <div class="error-page">
+            <center>
             <h2 class="headline text-yellow">Erreur {{ codeErreur }}</h2>
             <div class="error-content">
               <h3><i class="fa fa-warning text-yellow"></i>{{ MessageErreur }}</h3>
@@ -41,7 +41,7 @@
                 <a href="{{ path('acceuil') }}">Retour a l'acceuil</a>
               </p>
             </div><!-- /.error-content -->
-          </div><!-- /.error-page -->
+            </center>
         </section><!-- /.content -->
 
       <!-- Control Sidebar -->
