--- a/vues/error.html.twig
+++ b/vues/error.html.twig
@@ -37,7 +37,7 @@
             {% if codeErreur == 404 %}
                 <h1 class="headline text-red">Erreur {{ codeErreur }}</h1>
                 <div class="error-content">
-                    <h3><i class="fa fa-danger text-red"></i> {{ MessageErreur }}</h3>
+                    <h3><i class="fa fa-warning text-red"></i> {{ MessageErreur }}</h3>
                     <p>
                         <a href="{{ path('acceuil') }}">Retour a l'acceuil</a>
                     </p>
