--- a/vues/tableau.html.twig
+++ b/vues/tableau.html.twig
@@ -32,7 +32,8 @@
             <tr>
                 <th colspan="62"><span style="text-align: center;"><h3><strong>Situations vécues en Formation</strong></h3></span></th>
             </tr>
-            {% for activite in activites %}
+            {% for activite in activites if periode == formation %}
+
                 <tr>
                     <td> {{ activite.getLibelle() }} </td>
                     {% for competence in competences %}
@@ -50,7 +51,7 @@
             <tr>
                 <th colspan="62"><span style="text-align: center;"><h3><strong> 1er Stage </strong></h3></span></th>
             </tr>
-            {% for activite in activites %}
+            {% for activite in activites if periode == stage1 %}
                 <tr>
                     <td> {{ activite.getLibelle() }} </td>
                     {% for competence in competences %}
@@ -68,7 +69,7 @@
             <tr>
                 <th colspan="62"><span style="text-align: center;"><h3><strong> 2eme Stage </strong></h3></span></th>
             </tr>
-            {% for activite in activites %}
+            {% for activite in activites if periode == stage2 %}
                 <tr>
                     <td> {{ activite.getLibelle() }} </td>
                         {% for competence in competences %}
