--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -46,7 +46,7 @@
                     <tfoot>
                       <tr>
                         <th>Nom</th>
-                        <th>Prenom</th>
+                        <th>Prénom</th>
                         <th>Email</th>
                         <th style="width:60px;">Action</th>
                       </tr>
