--- a/vues/error.html.twig
+++ b/vues/error.html.twig
@@ -39,7 +39,7 @@
                 <div class="error-content">
                     <h3><i class="fa fa-warning text-red"></i> {{ MessageErreur }}</h3>
                     <p>
-                        <a href="{{ path('acceuil') }}">Retour a l'acceuil</a>
+                        <a href="{{ path('acceuil') }}">Retour à l'acceuil</a>
                     </p>
                 </div><!-- /.error-content -->
             {% else %}
@@ -47,7 +47,7 @@
                 <div class="error-content">
                     <h3><i class="fa fa-warning text-yellow"></i> {{ MessageErreur }}</h3>
                     <p>
-                        <a href="{{ path('acceuil') }}">Retour a l'acceuil</a>
+                        <a href="{{ path('acceuil') }}">Retour à l'acceuil</a>
                     </p>
                 </div><!-- /.error-content -->
             {% endif %}
