--- a/vues/acceuil_admin_prof.html.twig
+++ b/vues/acceuil_admin_prof.html.twig
@@ -7,23 +7,42 @@
 
     <section class="content">
         <div class="box-body">
-                <div class="row">
-                    <div class="col-lg-3 col-xs-6">
-                        <!-- small box -->
-                        <div class="small-box bg-aqua">
-                            <div class="inner">
-                                <h3>{{ eleves|length }}</h3>
-                                <p>Eleves</p>
-                            </div>
-                            <div class="icon">
-                                <i class="ion ion-person-add"></i>
-                            </div>
-                            <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Ajouter Utilisateur <i class="fa fa-arrow-circle-right"></i></a>
-                            <a href="{{ path ('eleve') }}" class="small-box-footer">Toutes les Eleves <i class="fa fa-arrow-circle-right"></i></a>
+            <div class="row">
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-aqua">
+                        <div class="inner">
+                            <h3>{{ eleves|length }}</h3>
+                            <p>Eleves</p>
                         </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                        <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Ajouter Utilisateur <i class="fa fa-arrow-circle-right"></i></a>
+                        <a href="{{ path ('eleve') }}" class="small-box-footer">Toutes les Eleves <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
-                    <!-- ./col -->
-                    {% if is_granted('ROLE_ADMIN') %}
+                </div>
+                <!-- ./col -->
+                {% if is_granted('ROLE_PROF') %}
+                    {% if  eleve.activites|length/65) * 100 < 25 %}</th>
+                        <div class="col-lg-4 col-xs-6">
+                            <!-- Competences "%" -->
+                            <div class="small-box bg-red">
+                                <div class="inner">
+                                    <h3>attention eleve(s) ayant</sup></h3>
+                                    <p>moins de 25% de compétences aqcuise</p>
+                                </div>
+                                <div class="icon">
+                                    <i class="ion ion-pie-graph"></i>
+                                </div>
+                                <a href="{{ path ('eleve') }}" class="small-box-footer">Liste Eleves <i class="fa fa-arrow-circle-right"></i></a>
+                                Pour en savoir plus <i class="fa fa-arrow-circle-right"></i>
+                                </a>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
                     <div class="col-lg-3 col-xs-6">
                         <!-- small box -->
                         <div class="small-box bg-green">
@@ -38,41 +57,41 @@
                             <a href="{{ path ('professeur') }}" class="small-box-footer">Tous les Professeurs <i class="fa fa-arrow-circle-right"></i></a>
                         </div>
                     </div>
-                    {% endif %}
-                    <!-- ./col -->
-                    <div class="col-lg-3 col-xs-6">
-                        <!-- small box -->
-                        <div class="small-box bg-yellow">
-                            <div class="inner">
-                                <h3>{{ promotions|length }}</h3>
+                {% endif %}
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-yellow">
+                        <div class="inner">
+                            <h3>{{ promotions|length }}</h3>
 
-                                <p>Promotions</p>
-                            </div>
-                            <div class="icon">
-                                <i class="ion ion-university"></i>
-                            </div>
-                            <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">Ajouter une Promotion<i class="fa fa-arrow-circle-right"></i></a>
-                            <a href="{{ path ('promotion') }}" class="small-box-footer">Toutes les promotions <i class="fa fa-arrow-circle-right"></i></a>
+                            <p>Promotions</p>
                         </div>
-                    </div>
-                    <!-- ./col -->
-                    <div class="col-lg-3 col-xs-6">
-                        <!-- small box -->
-                        <div class="small-box bg-red">
-                            <div class="inner">
-                                <h3>Admin</h3>
-
-                                <p>Partie Administration</p>
-                            </div>
-                            <div class="icon">
-                                <i class="ion ion-android-lock"></i>
-                            </div>
-                            <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Administration <i class="fa fa-arrow-circle-right"></i></a>
+                        <div class="icon">
+                            <i class="ion ion-university"></i>
                         </div>
+                        <a href="{{ path ('ajout_promotion') }}" class="small-box-footer">Ajouter une Promotion<i class="fa fa-arrow-circle-right"></i></a>
+                        <a href="{{ path ('promotion') }}" class="small-box-footer">Toutes les promotions <i class="fa fa-arrow-circle-right"></i></a>
                     </div>
-                    <!-- ./col -->
                 </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-red">
+                        <div class="inner">
+                            <h3>Admin</h3>
+
+                            <p>Partie Administration</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-android-lock"></i>
+                        </div>
+                        <a href="{{ path ('ajout_utilisateur') }}" class="small-box-footer">Administration <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
             </div>
+        </div>
         </div>
     </section>
 {% endblock %}
