--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -25,6 +25,7 @@
                         <th>Nom</th>
                         <th>Prénom</th>
                         <th>Email</th>
+                          <th>Pourcentage Comp</th>
                         <th style="width:60px;">Action</th>
                       </tr>
                     </thead>
@@ -34,7 +35,8 @@
                             <th>{{ eleve.getNom() }}</th>
                             <th>{{ eleve.getPrenom() }}</th>
                             <th>{{ eleve.getMail() }}</th>
-                            <th style="width:60px; text-align:center;" >
+                              <th>({{ eleve.activites|length/65) * 100 }}</th>
+                              <th style="width:60px; text-align:center;" >
                                   <div class="btn-group">
                                       <a href="{{ path('utilisateur_edit_', { 'id': eleve.getId() }) }}" title="Modifier" type="button" style="margin-right:5px;" class="btn btn-warning btn-flat"><i class="fa fa-pencil"></i></a>
                                       <a href="{{ path('utilisateur_sup_', { 'id': eleve.getId() }) }}" title="Supprimer" type="button" class="btn btn-danger btn-flat"><i class="fa fa-times"></i></a>
@@ -48,7 +50,8 @@
                         <th>Nom</th>
                         <th>Prénom</th>
                         <th>Email</th>
-                        <th style="width:60px;">Action</th>
+                          <th>Pourcentage Comp</th>
+                          <th style="width:60px;">Action</th>
                       </tr>
                     </tfoot>
                   </table>
