--- a/vues/eleves.html.twig
+++ b/vues/eleves.html.twig
@@ -35,7 +35,7 @@
                             <th>{{ eleve.getNom() }}</th>
                             <th>{{ eleve.getPrenom() }}</th>
                             <th>{{ eleve.getMail() }}</th>
-                              <th>({{ eleve.activites|length/65) * 100 }}</th>
+                              <th>({{ eleve.getactivites() }}</th>
                               <th style="width:60px; text-align:center;" >
                                   <div class="btn-group">
                                       <a href="{{ path('utilisateur_edit_', { 'id': eleve.getId() }) }}" title="Modifier" type="button" style="margin-right:5px;" class="btn btn-warning btn-flat"><i class="fa fa-pencil"></i></a>
